# bright_english_sch

./: .dockerignore  .gitignore  Dockerfile  LECENSE  README.md  pyproject.toml  requirements.txt
english_school/: .env.example  db_bright.sqlite3  manage.py
english_school/english_school/: asgi.py  settings.py  urls.py  wsgi.py
english_school/english_school_project/: asgi.py  settings.py  urls.py  wsgi.py
english_school/i18n_switcher/templatetags/: i18n_switcher.py
english_school/locale/en/LC_MESSAGES/: django.po
english_school/locale/uk/LC_MESSAGES/: django.po
english_school/main/: admin.py  apps.py  authentication.py  mail_messsage_generator.py  models.py  serializers.py  urls.py  views.py
english_school/main/migrations/: 0001_initial.py  0002_alter_subscrabe_email_options.py
english_school/main/templates/shop/: index.html
english_school/static/: staticfiles.json
english_school/static/css/: custom_admin.515fe16a7942.css
english_school/static/rest_framework/docs/css/: base.css
english_school/templates/admin/: base_site.html  homepage.html  language_switcher.html
english_school/writingApp/: admin.py  apps.py  models.py  urls.py  views.py
english_school/writingApp/migrations/: 0001_initial.py  0002_texteditor_title.py  0003_alter_texteditor_options_texteditor_is_selected.py
